--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
 		<script src="https://kit.fontawesome.com/a767dcf355.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
-  <body>
+  <body class="top-level">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
